# user-stash

./: .gitignore  README.md  docker-compose.yml
pypi_packages/user-stash-server/: pyproject.toml
user-stash-app/: .env.example  Dockerfile  README.md  angular.json  package-lock.json  package.json
user-stash-app/.angular/cache/18.2.11/user-stash-app/: .tsbuildinfo
user-stash-app/.angular/cache/18.2.11/user-stash-app/vite/deps_ssr/: _metadata.json
user-stash-app/src/: index.html
user-stash-app/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts  auth.interceptor.ts  auth.service.ts  environment.ts  user.interface.ts
user-stash-app/src/app/login/: login.component.html  login.component.ts
user-stash-app/src/app/register/: register.component.html  register.component.ts
user-stash-app/src/app/services/: auth.service.ts
user-stash-app/src/app/user/: user.component.html  user.component.ts
user-stash-server/: Dockerfile  LICENSE  README.md  pyproject.toml
user-stash-server/migrations/versions/: f85e88185245_initial_migration.py
user-stash-server/user_stash/: .env  .env.example  app.py  config.py  models.py  routes.py
